feature(enemies): create data structures and start tackling rendering ISMs
+ Create and populate DataTables for Enemies and Weapons
+ Create a ARenderActor to make ISM components exist in the scene
* Rename UMassRenderComponent to UEnemyRenderComponent
+ Complete Data structures for weapons and enemies, made slight changes in composition
+ Add operator overloads and constructors to translate raw struct-table to code-struct
* Fix Enums naming and add missing macro
+ Add UMG and Niagara modules to build toolchain
* Add some Core redirects

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,3 +95,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++ClassRedirects=(OldName="/Script/UE_TP_Survivor.EnemyInstance",NewName="/Script/UE_TP_Survivor.EnemyInstance")
++PropertyRedirects=(OldName="/Script/UE_TP_Survivor.RenderActor.ISMComps",NewName="/Script/UE_TP_Survivor.RenderActor.ISMs")
++ClassRedirects=(OldName="/Script/UE_TP_Survivor.MassRenderComponent",NewName="/Script/UE_TP_Survivor.EnemyRenderComponent")
